// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoGrid renders with title prop 1`] = `
<Fragment>
  <div
    className="video-section"
  >
    <VideoGridHeader
      title="Trending"
    />
    <div
      className="video-grid"
    >
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
    </div>
  </div>
  <Divider />
</Fragment>
`;

exports[`VideoGrid renders without divider 1`] = `
<Fragment>
  <div
    className="video-section"
  >
    <VideoGridHeader />
    <div
      className="video-grid"
    >
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
    </div>
  </div>
</Fragment>
`;

exports[`VideoGrid renders without props 1`] = `
<Fragment>
  <div
    className="video-section"
  >
    <VideoGridHeader />
    <div
      className="video-grid"
    >
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
      <VideoPreview
        expanded={true}
      />
    </div>
  </div>
  <Divider />
</Fragment>
`;
